syntax = "proto3";

package test_data;

// Key-Value pairs message
message KeyValuePairs {
  map<string, string> kv_pairs = 1;
}

// Flat Primitive List message
message FlatList {
  repeated int32 items = 1;  // Assuming a list of integers for simplicity
}

// Composite Complex Data message
message ComplexData {
  KeyValuePairs info = 1;
  FlatList numbers = 2;
  repeated NestedData nested = 3;
}

// Nested data within complex data
message NestedData {
  int32 id = 1;
  string name = 2;
}
